Code review - Use DTOs instead of model entities in controller + UserController small enhancements and better test coverage + factorize some test code