@@ -1,15 +1,17 @@
 package com.sbr.userapi.web;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.hamcrest.CoreMatchers.is;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.verify;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -20,11 +22,14 @@ import org.mockito.internal.verification.VerificationModeFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
+import org.springframework.test.web.servlet.ResultActions;
 
+import com.sbr.userapi.exception.UserNotFoundException;
 import com.sbr.userapi.model.User;
 import com.sbr.userapi.service.UserService;
 import com.sbr.userapi.test.JsonUtils;
@@ -33,28 +38,45 @@ import com.sbr.userapi.test.TestUtils;
 @ExtendWith(SpringExtension.class)
 @WebMvcTest(UserController.class)
 public class UserControllerTest {
-	private static final Long USER_MICHAEL_ID = 1L;
-	private static final Long USER_MARIE_ID = 2L;
-	private static final Long USER_CHARLES_ID = 3L;
-
 	@Autowired
 	private MockMvc mvc;
 
 	@MockBean
 	private UserService userService;
 
+	/**
+	 * Test method {@link UserController#getUserById(Long)}. User should be returned
+	 * by controller in the response with same values as provided by the (mocked)
+	 * user service
+	 * 
+	 * @throws Exception not expected
+	 */
+	@Test
+	public void getUserByIdWithDTO_responseContainsUserDetails() throws Exception {
+		final User userMichael = TestUtils.createTestUserMichaelWithId();
+
+		// Mock repository response
+		given(userService.getUserById(1L)).willReturn(userMichael);
+
+		final ResultActions resultActions = mvc
+				.perform(get(UserControllerConstants.REST_API_ROOT_URL + "/1").accept(MediaType.APPLICATION_JSON))
+				.andDo(print()).andExpect(status().isOk())
+				.andExpect(content().contentType(MediaType.APPLICATION_JSON_VALUE));
+		TestUtils.andExpectAllFieldsInJsonObjectIsUserMichael(resultActions);
+		verify(userService, VerificationModeFactory.times(1)).getUserById(1L);
+	}
+
 	@Test
 	public void createUser_whenPostUser_thenResponseContainsUserDetails() throws Exception {
-		final User userMichael = TestUtils.createTestUserMichael();
+		final User userMichael = TestUtils.createTestUserMichaelWithId();
 
 		// Mock repository response
 		given(userService.createUser(Mockito.any(), Mockito.any())).willReturn(userMichael);
 
-		mvc.perform(post(UserControllerConstants.REST_API_ROOT_URL).contentType(MediaType.APPLICATION_JSON)
-				.content(JsonUtils.toJson(userMichael))).andExpect(status().isCreated())
-				.andExpect(jsonPath("$.firstName", is(TestUtils.USER_MICHAEL_FIRST_NAME)))
-				.andExpect(jsonPath("$.email", is(TestUtils.USER_MICHAEL_EMAIL)))
-				.andExpect(jsonPath("$.password", is(TestUtils.USER_MICHAEL_PASSWORD)));
+		final ResultActions resultActions = mvc.perform(post(UserControllerConstants.REST_API_ROOT_URL)
+				.contentType(MediaType.APPLICATION_JSON).content(JsonUtils.toJson(userMichael))).andDo(print())
+				.andExpect(status().isCreated());
+		TestUtils.andExpectAllFieldsInJsonObjectIsUserMichael(resultActions);
 		verify(userService, VerificationModeFactory.times(1)).createUser(Mockito.any(), Mockito.any());
 	}
 
@@ -65,45 +87,150 @@ public class UserControllerTest {
 		// Mock repository response
 		given(userService.findAll()).willReturn(usersList);
 
-		MvcResult mvcResult = mvc
+		final MvcResult mvcResult = mvc
 				.perform(get(UserControllerConstants.REST_API_ROOT_URL).contentType(MediaType.APPLICATION_JSON))
-				.andExpect(status().isOk()).andReturn();
+				.andDo(print()).andExpect(status().isOk()).andReturn();
 		assertThat(mvcResult.getResponse().getContentLength()).isEqualTo(0);
 		verify(userService, VerificationModeFactory.times(1)).findAll();
 	}
 
 	@Test
 	public void findAll_whenUsersExist_thenResponseIsOKAndContainsAllTestUsersDetails() throws Exception {
-		final User userMichael = TestUtils.createTestUserMichael();
-		userMichael.setId(USER_MICHAEL_ID);
+		final User userMichael = TestUtils.createTestUserMichaelWithId();
+		final User userMarie = TestUtils.createTestUserMarieWithId();
+		final User userCharles = TestUtils.createTestUserCharlesWithId();
 
-		final User userMarie = TestUtils.createTestUserMarie();
-		userMarie.setId(USER_MARIE_ID);
-
-		final User userCharles = TestUtils.createTestUserCharles();
-		userCharles.setId(USER_CHARLES_ID);
-
-		final List<User> allUsers = Arrays.asList(userMichael, userMarie, userCharles);
+		final List<User> allUsers = List.of(userMichael, userMarie, userCharles);
 
 		// Mock repository response
 		given(userService.findAll()).willReturn(allUsers);
 
-		mvc.perform(get(UserControllerConstants.REST_API_ROOT_URL).contentType(MediaType.APPLICATION_JSON))
-				.andExpect(status().isOk())
-				// Check user Michael
-				.andExpect(jsonPath("$.[0].id", is(USER_MICHAEL_ID.intValue())))
-				.andExpect(jsonPath("$.[0].firstName", is(TestUtils.USER_MICHAEL_FIRST_NAME)))
-				.andExpect(jsonPath("$.[0].email", is(TestUtils.USER_MICHAEL_EMAIL)))
-				.andExpect(jsonPath("$.[0].password", is(TestUtils.USER_MICHAEL_PASSWORD)))
-				// Check user Marie
-				.andExpect(jsonPath("$.[1].id", is(USER_MARIE_ID.intValue())))
-				.andExpect(jsonPath("$.[1].firstName", is(TestUtils.USER_MARIE_FIRST_NAME)))
-				.andExpect(jsonPath("$.[1].email", is(TestUtils.USER_MARIE_EMAIL)))
-				.andExpect(jsonPath("$.[1].password", is(TestUtils.USER_MARIE_PASSWORD)))
-				// Check user Charles
-				.andExpect(jsonPath("$.[2].id", is(USER_CHARLES_ID.intValue())))
-				.andExpect(jsonPath("$.[2].firstName", is(TestUtils.USER_CHARLES_FIRST_NAME)))
-				.andExpect(jsonPath("$.[2].email", is(TestUtils.USER_CHARLES_EMAIL)))
-				.andExpect(jsonPath("$.[2].password", is(TestUtils.USER_CHARLES_PASSWORD)));
+		final ResultActions resultActions = mvc
+				.perform(get(UserControllerConstants.REST_API_ROOT_URL).contentType(MediaType.APPLICATION_JSON))
+				.andDo(print()).andExpect(status().isOk());
+		// Check users in response
+		TestUtils.andExpectAllFieldsInJsonListIsUserMichael(resultActions, 0);
+		TestUtils.andExpectAllFieldsInJsonListIsUserMarie(resultActions, 1);
+		TestUtils.andExpectAllFieldsInJsonListIsUserCharles(resultActions, 2);
+
 	}
+
+	/**
+	 * Test method {@link UserController#findUser(String, String)}. When searching
+	 * by firstName only and user exists, it should be returned by controller in the
+	 * response with same values as provided by the (mocked) user service
+	 * 
+	 * @throws Exception not expected
+	 * 
+	 */
+	@Test
+	public void findUser_whenByFirstNameOnlyAndUsersExist_thenResponseIsOKAndContainsUserDetails() throws Exception {
+		final User userCharles = TestUtils.createTestUserCharlesWithId();
+
+		// Mock repository response
+		given(userService.findUser(TestUtils.USER_CHARLES_FIRST_NAME, null)).willReturn(List.of(userCharles));
+
+		final ResultActions resultActions = mvc
+				.perform(get(UserControllerConstants.REST_API_ROOT_URL + UserControllerConstants.PATH_FIND)
+						.param(UserControllerConstants.PARAM_FIRST_NAME, TestUtils.USER_CHARLES_FIRST_NAME)
+						.contentType(MediaType.APPLICATION_JSON))
+				.andDo(print()).andExpect(status().isOk());
+		// Check user Charles in response
+		TestUtils.andExpectAllFieldsInJsonListIsUserCharles(resultActions, 0);
+	}
+
+	/**
+	 * Test method {@link UserController#findUser(String, String)}. When searching
+	 * by firstName only and user does NOT exist, an empty list should be returned
+	 * by controller in the response
+	 * 
+	 * @throws Exception not expected
+	 * 
+	 */
+	@Test
+	public void findUser_whenByFirstNameOnlyAndUserDoesNotExist_thenResponseIsOKAndEmptyList() throws Exception {
+		// Mock repository response
+		given(userService.findUser("DOESNOTEXIST", null)).willReturn(Collections.emptyList());
+
+		mvc.perform(get(UserControllerConstants.REST_API_ROOT_URL + UserControllerConstants.PATH_FIND)
+				.param(UserControllerConstants.PARAM_FIRST_NAME, TestUtils.USER_CHARLES_FIRST_NAME)
+				.contentType(MediaType.APPLICATION_JSON)).andDo(print()).andExpect(status().isOk())
+				.andExpect(content().string("[]"));
+	}
+
+	/**
+	 * Test method {@link UserController#findUser(String, String)}. When searching
+	 * by email only and user exists, it should be returned by controller in the
+	 * response with same values as provided by the (mocked) user service
+	 * 
+	 * @throws Exception not expected
+	 * 
+	 */
+	@Test
+	public void findUser_whenByEmailOnlyAndUsersExist_thenResponseIsOKAndContainsUserDetails() throws Exception {
+		final User userCharles = TestUtils.createTestUserCharlesWithId();
+
+		// Mock repository response
+		given(userService.findUser(null, TestUtils.USER_CHARLES_EMAIL)).willReturn(List.of(userCharles));
+
+		final ResultActions resultActions = mvc
+				.perform(get(UserControllerConstants.REST_API_ROOT_URL + UserControllerConstants.PATH_FIND)
+						.param(UserControllerConstants.PARAM_EMAIL, TestUtils.USER_CHARLES_EMAIL)
+						.contentType(MediaType.APPLICATION_JSON))
+				.andDo(print()).andExpect(status().isOk());
+		// Check user Charles in response
+		TestUtils.andExpectAllFieldsInJsonListIsUserCharles(resultActions, 0);
+	}
+
+	/**
+	 * Test method {@link UserController#findUser(String, String)}. When searching
+	 * by email only and user does NOT exist, an empty list should be returned by
+	 * controller in the response
+	 * 
+	 * @throws Exception not expected
+	 * 
+	 */
+	@Test
+	public void findUser_whenByEmailOnlyAndUserDoesNotExist_thenResponseIsOKAndContainsEmptyList() throws Exception {
+		// Mock repository response
+		given(userService.findUser(null, "DOESNOTEXIST")).willReturn(Collections.emptyList());
+
+		mvc.perform(get(UserControllerConstants.REST_API_ROOT_URL + UserControllerConstants.PATH_FIND)
+				.param(UserControllerConstants.PARAM_EMAIL, "DOESNOTEXIST").contentType(MediaType.APPLICATION_JSON))
+				.andDo(print()).andExpect(status().isOk()).andExpect(content().string("[]"));
+	}
+
+	/**
+	 * Test method {@link UserController#deleteUserById(Long)}. When user exists,
+	 * method should return with status {@link HttpStatus#NO_CONTENT
+	 * HttpStatus.NO_CONTENT (204)}
+	 * 
+	 * @throws Exception not expected
+	 */
+	@Test
+	public void deleteUserById_whenUserExists_thenItShouldBeDeletedAndResponseNoContentAndHasEmptyBody()
+			throws Exception {
+		// Mock repository response
+		doNothing().when(userService).deleteUserById(1L);
+
+		mvc.perform(delete(UserControllerConstants.REST_API_ROOT_URL + "/1").contentType(MediaType.APPLICATION_JSON))
+				.andDo(print()).andExpect(status().isNoContent()).andExpect(content().string(""));
+	}
+
+	/**
+	 * Test method {@link UserController#deleteUserById(Long)}. When user does NOT
+	 * exist, method should return with status {@link HttpStatus#NOT_FOUND
+	 * HttpStatus.NOT_FOUND (404)}
+	 * 
+	 * @throws Exception not expected
+	 */
+	@Test
+	public void deleteUserById_whenUserDoesNotExist_thenResponseIsNotFoundAndHasEmptyBody() throws Exception {
+		// Mock repository response : throw exc
+		doThrow(UserNotFoundException.class).when(userService).deleteUserById(1L);
+
+		mvc.perform(delete(UserControllerConstants.REST_API_ROOT_URL + "/1").contentType(MediaType.APPLICATION_JSON))
+				.andDo(print()).andExpect(status().isNotFound()).andExpect(content().string(""));
+	}
+
 }
